re-design layout

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
 <script src="./asset/vendors/bxslider/jquery.bxslider.min.js"></script>
 <script src="./asset/vendors/colorbox/jquery.colorbox-min.js"></script>
 <script src="./asset/vendors/animo/Animo.js"></script>
-<script src="./asset/vendors/dug/dug.js"></script>
-<script src="./asset/js/scripts.min.js"></script>
+<!--<script src="./asset/vendors/dug/dug.js"></script>-->
+<!--<script src="./asset/js/scripts.min.js"></script>-->
 
 <script type="text/javascript">
     $(function () {
